--- a/ms-discovery/build.gradle
+++ b/ms-discovery/build.gradle
@@ -17,6 +17,29 @@ repositories {
 }
 
 dependencies {
+
+	compile (
+		'org.slf4j:slf4j-api:1.7.25'
+		, 'org.slf4j:jcl-over-slf4j:1.7.25'
+		, 'ch.qos.logback:logback-classic:1.2.3'
+		, 'ch.qos.logback:logback-core:1.2.3'
+	)
+
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-parent
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-parent', version: '1.5.8.RELEASE', ext: 'pom'
+	
+	// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-eureka-server
+	compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-eureka-server', version: '1.4.6.RELEASE'
+	
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '1.5.8.RELEASE'
+	
+	// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-dependencies
+	compile group: 'org.springframework.cloud', name: 'spring-cloud-dependencies', version: 'Edgware.RELEASE', ext: 'pom'
+	
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-gradle-plugin
+	compile group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: '1.5.8.RELEASE', ext: 'pom'
+	
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
 
@@ -25,5 +48,8 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test
+	testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.5.8.RELEASE'
 }
 
