update ms-user config

--- a/ms-config-properties/ms-user/default/ms-user.yml
+++ b/ms-config-properties/ms-user/default/ms-user.yml
@@ -1,4 +1,10 @@
 spring:
+  kafka:
+    consumer:
+      group-id: ms_mail_consumer
+    bootstrap-servers: localhost:9092
+    topic:
+      userCreated: USER_CREATED_TOPIC
   h2:
     console:
       enabled: true
